package behavioral.observer.stream;

public interface MyStreamListener<T>{
    public void listen(T t);
}
